@@ -6,6 +6,56 @@ module Nokogiri
   module XML
     module SAX
       class TestParserContext < Nokogiri::SAX::TestCase
+        def setup
+          @xml = '<hello>
+
+world
+<inter>
+    <net>
+    </net>
+</inter>
+
+</hello>'
+        end
+
+        class Counter < Nokogiri::XML::SAX::Document
+          attr_accessor :context, :lines, :columns
+          def initialize
+            @context = nil
+            @lines   = []
+            @columns = []
+          end
+
+          def start_element name, attrs = []
+            @lines << [name, context.line]
+            @columns << [name, context.column]
+          end
+        end
+
+        def test_line_numbers
+          sax_handler = Counter.new
+
+          parser = Nokogiri::XML::SAX::Parser.new(sax_handler)
+          parser.parse(@xml) do |ctx|
+            sax_handler.context = ctx
+          end
+
+          assert_equal [["hello", 1], ["inter", 4], ["net", 5]],
+            sax_handler.lines
+        end
+
+        def test_column_numbers
+          sax_handler = Counter.new
+
+          parser = Nokogiri::XML::SAX::Parser.new(sax_handler)
+          parser.parse(@xml) do |ctx|
+            sax_handler.context = ctx
+          end
+
+          assert_equal [["hello", 7], ["inter", 7], ["net", 9]],
+            sax_handler.columns
+        end
+
         def test_replace_entities
           pc = ParserContext.new StringIO.new('<root />'), 'UTF-8'
           pc.replace_entities = false
